tests/NormalTests/paczka1/small_fuzzy/91743101.err
Error in line 12: kXYjCjDT A233 40,3
Error in line 16: ,XYjCjDT S192 78,5
